# annobin

./: .#CONTRIBUTING  0001-10.51-Annocheck-Skip-some-tests-for-BPF-files.patch  CONTRIBUTING  LICENSE  Makefile.am  Makefile.in  aclocal.m4  annobin-global.h  annobin-global.h.in  annobin-global.h~  configure  configure.ac  meson.build  meson_options.txt
annocheck/: #libannocheck.h#  .#libannocheck.h  Makefile.am  Makefile.in  annocheck.c  annocheck.h  built-by.c  hardened.c  hardened.c.rej  jcc-scan.c  libannocheck.h  libannocheck.h.in  makefile.jcc  meson.build  notes.c  retpolines.c  size.c  timing.c
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
clang-plugin/: Makefile.in  PrintFunctionNames.cpp  annobin.cpp  makefile  meson.build
config/: annocheck.m4  compile  debuginfod.m4  gcc-plugin.m4  libelf.m4  libgomp.m4  ltmain.sh
doc/: #annobin.texi#  .#annobin.texi  Makefile.am  Makefile.in  annobin.1  annobin.info  annobin.texi  annocheck.1  annotation.proposal.txt  built-by.1  check-abi.1  hardened.1  meson.build  run-on-binaries-in.1  run-on-binaries.1
gcc-plugin/: #annobin.h#  .#annobin.h  Makefile.am  Makefile.in  aarch64.annobin.cc  annobin.cc  annobin.h  arm.annobin.cc  config.h  config.h.in  config.h.in~  configure  configure.ac  dummy.annobin.cc  i686.annobin.cc  meson.build  powerpc.annobin.cc  riscv.annobin.cc  s390.annobin.cc  x86_64.annobin.cc
llvm-plugin/: Makefile.in  a.out  annobin.cpp  hello  hello.bc  hello.c  hello.i  hello.s  makefile  meson.build
plugin/: Makefile.am  Makefile.in  aarch64.annobin.cc  aclocal.m4  annobin.cc  annobin.cc~  annobin.h  config.h  config.h.in  configure  configure.ac  dummy.annobin.cc  powerpc.annobin.cc  x86_64.annobin.cc
scripts/: Makefile.am  Makefile.in  built-by  built-by.sh  check-abi  check-abi.sh  hardened  hardened.sh  make-release.sh  run-on-binaries-in  run-on-binaries-in.sh
tests/: Makefile.am  Makefile.in  abi-test  active-checks-test  assembler-gap-test  atexit-test  atexit.c  clang-test  common.sh  compile-test  debuginfod-test  dynamic-notes-test  fortify-test  function-sections-test  gap.S  gaps-test  glibc-notes-test  hardening-fail-test  hardening-test  hello-llvm-clang.c  hello.c  hello2.c  hello_hard.c  instrumentation-test  ldconfig-test  libannocheck-test  llvm-test  lto-test  main.c  meson.build  missing-notes-test  objcopy-test  property-note-test  property-note.S  section-size-test  stat-test  stat.c  trick-hello.s  unicode-test  unused_code.c  (+1 more)
