## Copyright (C) 2017 Free Software Foundation, Inc.

## You should have received a copy of the GNU General Public License v3
## along with this program; see the file COPYING3.  If not see
## <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in.

dist_bin_SCRIPTS = built-by.sh check-abi.sh hardened.sh
